--- a/about.html
+++ b/about.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="about.css">
 </head>
 <body>
-    
+    <section class="">
+        <div class="about">
+            <div class="about-con">
+                <p>Hello, at autosoe , we are passionate about providing a vast selection of electronic component for mechanisms and professional alike, our commitment to quality and innovation ensurethat each product is curated to meet you ta your work shop.</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
