--- a/contact.html
+++ b/contact.html
@@ -79,9 +79,10 @@
                 <a href=""><button class="location-button">Send Message</button></a>
             </div>
         </div>
-        <div>
+        <div class="map">
             <iframe
                 width="800"
+                class="map"
                 height="400"
                 style="border:0;border-radius: 10px;"
                 loading="lazy"
@@ -91,5 +92,80 @@
                 </iframe>
         </div>
     </div>
+    <footer>
+        <div class="footer-content">
+            <div class="footer-content-div1">
+                <div class="footer-content-div">
+                    <img src="logo.jpg" alt="">
+                    <p class="stock">Autosoe is a thriving specialty retail business,specializing in automotive parts and accessories. we also stock a wide range of tools and accessories</p>
+                </div>
+                <div class="cnnt1">
+                    <p class="connect">connect with us:</p>
+                    <div>
+                        <img src="twitter.svg" alt="">
+                        <img src="facebook.svg" alt="">
+                        <img src="instagram.svg" alt="">
+                        <img src="linkedin.svg" alt="">
+                        <div class="app"><img src="apple-logo.svg" alt=""></div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-content-div">
+                <p class="hh">Contact us</p>
+                <div class="footer-content-div">
+                    <div class="toll">
+                        <img src="header-icon2.png" alt="">
+                        <p>toll free<span>+1(800) 123 456</span></p>
+                    </div>
+                    <div class="live">
+                        <img src="instagram.svg" style="color:#fff;" alt="">
+                        <p>Live chat now <button>live chat</button></p>
+                    </div>
+                    <div class="email">
+                        <!-- <img src="Screenshot (260).png" alt=""> -->
+                         <i class="fa-solid  fa-envelope"></i>
+                        <p>Email:demo@demo.com</p>
+                    </div>
+                </div>
+                <div class="business">
+                    <p>business hour :</p>
+                    <div>
+                        <p>mon-fri : 8 am - 12 am</p>
+                        <p>sat-sun : 10 am - 12 am</p>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-con">
+                <p class="hh">our company</p>
+                <div class="footer-content-div">
+                    <p>About us</p>
+                    <p>career</p>
+                    <p>affiliate</p>
+                    <p>contact us</p>
+                    <p>Gift card</p>
+                </div>
+            </div>
+            <div class="footer-con">
+                <p class="hh">My account</p>
+                <div class="footer-content-div">
+                    <p>My profile</p>
+                    <p>My order history</p>
+                    <p>My wish list</p>
+                    <p>Order tracking</p>
+                    <p>shopping cart</p>
+                </div>
+            </div>
+            <div class="footer-con">
+                <p class="hh">useful link</p>
+                <div class="footer-content-div">
+                    <p>New product</p>
+                    <p>Best seller</p>
+                    <p>Bundle&save</p>
+                    <p>Online Gift Crad</p>
+                    <p>Store Directory</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
