--- a/about.html
+++ b/about.html
@@ -7,10 +7,63 @@
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
+    <!-- HEADER -->
+     <header>
+        <img src="logo.jpg" alt="logo">
+        <input type="checkbox" id="check">
+        <label for="check"><span class="icon"><icon class="fa-solid  fa-bars"></icon></span></label>
+        <ul class="ull">
+            <a href="file:///C:/Users/USER/Desktop/Muhammed/New%20project/index.html"><li>Home</li></a>
+            <a href=""><li>About</li></a>
+            <a href=""><li>Product</li></a>
+            <a href=""><li>Contact</li></a>
+            <a href=""><li>FAQs</li></a>
+        </ul>
+        <div>
+            <button>log in</button>
+            <button>log out</button>
+        </div>
+    </header>
+    <!-- HERO -->
     <section class="">
         <div class="about">
             <div class="about-con">
                 <p>Hello, at autosoe , we are passionate about providing a vast selection of electronic component for mechanisms and professional alike, our commitment to quality and innovation ensurethat each product is curated to meet you ta your work shop.</p>
+            </div>
+        </div>
+    </section>
+    <section class="about-hero">
+        <div class="product-selection-con1">
+            <img src="Screenshot (259).png" alt="image/product">
+            <p class="wheel">SELECT WHEELS AND TYRES</p>
+            <button>Shop now</button>
+        </div>
+        <div class="ABOUT-HERO-CON">
+            <div class="about-hero-items">
+                <div>
+                    <img src="Screenshot (180).png" alt="">
+                    <p>Thalite johnson</p>
+                </div>
+                <div>
+                    <p>we notice extra gas mileage after installing this pieces.we needed a jump after our battery tested normal after world coudn't</p>
+                </div>
+                <div></div>
+            </div>
+            <div>
+                <div>
+                    <img src="Screenshot (195).png" alt="">
+                    <p>Gordon c bruagh</p>
+                </div>
+                <div></div>
+                <div></div>
+            </div>
+            <div>
+                <div>
+                    <img src="Screenshot (181).png" alt="">
+                    <p>Jessa k. williams</p>
+                </div>
+                <div></div>
+                <div></div>
             </div>
         </div>
     </section>
