--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
@@ -14,9 +14,9 @@
         <label for="check"><span class="icon"><icon class="fa-solid  fa-bars"></icon></span></label>
         <ul class="ull">
             <a href="file:///C:/Users/USER/Desktop/Muhammed/New%20project/index.html"><li>Home</li></a>
-            <a href=""><li>About</li></a>
-            <a href=""><li>Product</li></a>
-            <a href=""><li>Contact</li></a>
+            <a href="file:///C:/Users/USER/Desktop/Muhammed/New%20project/about.html"><li>About</li></a>
+            <a href="file:///C:/Users/USER/Desktop/Muhammed/New%20project/shop.html"><li>Product</li></a>
+            <a href="file:///C:/Users/USER/Desktop/Muhammed/New%20project/contact.html"><li>Contact</li></a>
             <a href=""><li>FAQs</li></a>
         </ul>
         <div>
@@ -28,44 +28,126 @@
     <section class="">
         <div class="about">
             <div class="about-con">
-                <p>Hello, at autosoe , we are passionate about providing a vast selection of electronic component for mechanisms and professional alike, our commitment to quality and innovation ensurethat each product is curated to meet you ta your work shop.</p>
+                <p>Hello, at autosoe , we are passionate about providing a vast selection of electronic component for mechanisms and professional alike, our commitment to quality and innovation ensure that each product is curated to meet you at your work shop.</p>
             </div>
         </div>
     </section>
     <section class="about-hero">
         <div class="product-selection-con1">
-            <img src="Screenshot (259).png" alt="image/product">
+            <img src="vt_autosoe_home1_testimonial_item.webp" alt="image/product">
             <p class="wheel">SELECT WHEELS AND TYRES</p>
-            <button>Shop now</button>
+            <button>Shop now<img src="angle-right.svg"></button>
         </div>
         <div class="ABOUT-HERO-CON">
             <div class="about-hero-items">
                 <div>
                     <img src="Screenshot (180).png" alt="">
-                    <p>Thalite johnson</p>
+                    <p class="name">Thalite johnson</p>
                 </div>
                 <div>
-                    <p>we notice extra gas mileage after installing this pieces.we needed a jump after our battery tested normal after world coudn't</p>
+                    <p>"we notice extra gas mileage after installing this pieces.we needed a jump after our battery tested normal after world coudn't have make a better purchase..."</p>
                 </div>
                 <div></div>
             </div>
-            <div>
+            <div class="about-hero-items">
                 <div>
                     <img src="Screenshot (195).png" alt="">
-                    <p>Gordon c bruagh</p>
+                    <p class="name">Gordon c bruagh</p>
                 </div>
-                <div></div>
+                <div>
+                    <p>"Motor worked fantastics installed nomodification into my older style fisher plow. took me a minutes and saved a hundred bucks. i could buy two of this for the price..."</p>
+                </div>
                 <div></div>
             </div>
-            <div>
+            <div class="about-hero-items">
                 <div>
                     <img src="Screenshot (181).png" alt="">
-                    <p>Jessa k. williams</p>
+                    <p class="name">Jessa k. williams</p>
                 </div>
-                <div></div>
+                <div>
+                    <p>I was apprehensive on  buying a plow motor that is not an actual western plow part. I must say. Great quality. Reliable. Great fit. No issue,I definitely would buy this product..."</p>
+                </div>
                 <div></div>
             </div>
         </div>
     </section>
+    <!-- footer -->
+
+    <footer>
+        <div class="footer-content">
+            <div class="footer-content-div1">
+                <div class="footer-content-div">
+                    <img src="logo.jpg" alt="">
+                    <p class="stock">Autosoe is a thriving specialty retail business,specializing in automotive parts and accessories. we also stock a wide range of tools and accessories</p>
+                </div>
+                <div class="connection-link">
+                    <p class="connect">connect with us:</p>
+                    <div>
+                        <img src="twitter.svg" alt="">
+                        <img src="facebook.svg" alt="">
+                        <img src="instagram.svg" alt="">
+                        <img src="linkedin.svg" alt="">
+                        <div class="app"><img src="apple-logo.svg" alt=""></div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-content-div">
+                <p class="hh">Contact us</p>
+                <div class="footer-content-div">
+                    <div class="toll">
+                        <img src="header-icon2.png" alt="">
+                        <p>toll free<span>+1(800) 123 456</span></p>
+                    </div>
+                    <div class="live">
+                        <img src="instagram.svg" style="color:#fff;" alt="">
+                        <p>Live chat now <button>live chat</button></p>
+                    </div>
+                    <div class="email">
+                        <!-- <img src="Screenshot (260).png" alt=""> -->
+                         <i class="fa-solid  fa-envelope"></i>
+                        <p>Email:demo@demo.com</p>
+                    </div>
+                </div>
+                <div class="business">
+                    <p>business hour :</p>
+                    <div>
+                        <p>mon-fri : 8 am - 12 am</p>
+                        <p>sat-sun : 10 am - 12 am</p>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-con">
+                <p class="hh">our company</p>
+                <div class="footer-content-div">
+                    <p>About us</p>
+                    <p>career</p>
+                    <p>affiliate</p>
+                    <p>contact us</p>
+                    <p>Gift card</p>
+                </div>
+            </div>
+            <div class="footer-con">
+                <p class="hh">My account</p>
+                <div class="footer-content-div">
+                    <p>My profile</p>
+                    <p>My order history</p>
+                    <p>My wish list</p>
+                    <p>Order tracking</p>
+                    <p>shopping cart</p>
+                </div>
+            </div>
+            <div class="footer-con">
+                <p class="hh">useful link</p>
+                <div class="footer-content-div">
+                    <p>New product</p>
+                    <p>Best seller</p>
+                    <p>Bundle&save</p>
+                    <p>Online Gift Crad</p>
+                    <p>Store Directory</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
