--- a/contact.html
+++ b/contact.html
@@ -14,9 +14,9 @@
         <label for="check"><span class="icon"><icon class="fa-solid  fa-bars"></icon></span></label>
         <ul class="ull">
             <a href="file:///C:/Users/USER/Desktop/Muhammed/New%20project/index.html"><li>Home</li></a>
-            <a href=""><li>About</li></a>
-            <a href=""><li>Product</li></a>
-            <a href=""><li>Contact</li></a>
+            <a href="file:///C:/Users/USER/Desktop/Muhammed/New%20project/about.html"><li>About</li></a>
+            <a href="file:///C:/Users/USER/Desktop/Muhammed/New%20project/shop.html"><li>Product</li></a>
+            <a href="file:///C:/Users/USER/Desktop/Muhammed/New%20project/contact.html"><li>Contact</li></a>
             <a href=""><li>FAQs</li></a>
         </ul>
         <div>
@@ -99,7 +99,7 @@
                     <img src="logo.jpg" alt="">
                     <p class="stock">Autosoe is a thriving specialty retail business,specializing in automotive parts and accessories. we also stock a wide range of tools and accessories</p>
                 </div>
-                <div class="cnnt1">
+                <div class="connection-link">
                     <p class="connect">connect with us:</p>
                     <div>
                         <img src="twitter.svg" alt="">
