--- a/shop.html
+++ b/shop.html
@@ -3,9 +3,213 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Product</title>
+    <link rel="stylesheet" href="shop.css">
 </head>
 <body>
-    
+    <header>
+        <img src="logo.jpg" alt="logo">
+        <input type="checkbox" id="check">
+        <label for="check"><span class="icon"><icon class="fa-solid  fa-bars"></icon></span></label>
+        <ul class="ull">
+            <a href="file:///C:/Users/USER/Desktop/Muhammed/New%20project/index.htm"><li>Home</li></a>
+            <a href="file:///C:/Users/USER/Desktop/Muhammed/New%20project/about.html"><li>About</li></a>
+            <a href="file:///C:/Users/USER/Desktop/Muhammed/New%20project/shop.html"><li>Product</li></a>
+            <a href="file:///C:/Users/USER/Desktop/Muhammed/New%20project/contact.html"><li>Contact</li></a>
+            <a href=""><li>FAQs</li></a>
+        </ul>
+        <div>
+            <button>log in</button>
+            <button>log out</button>
+        </div>
+    </header>
+        <div class="product-selection-con2">
+            <div class="categories">
+                <div class="categories-con">
+                    <img src="icon1.png" alt="">
+                    <p>Best deal of the week</p>
+                </div>
+                <p>Quality replacement european car parts</p>
+            </div>
+            <div class="product-list">
+                <div class="product-list-con1">
+                    <div class="product-list1">
+                        <img src="hummingbird-printed-t-shirt.jpg" alt="">
+                        <div class="product-rate">
+                            <p>High Performance plantinum spark plug set</p>
+                            <img src="Screenshot (179).png" alt="">
+                            <p>$23.90</p>
+                        </div>
+                    </div>
+                    <div class="product-list1">
+                        <img src="today-is-a-good-day-framed-poster.jpg" alt="">
+                        <div class="product-rate">
+                            <p>Advance fuel injector system for efficiency</p>
+                            <img src="Screenshot (181).png" alt="">
+                            <p>$29.00</p>
+                        </div>
+                    </div>
+                    <div class="product-list1">
+                        <img src="mug-the-adventure-begins.jpg" alt="">
+                        <div class="product-rate">
+                            <p>All-terrain Off-road tire set for any surface</p>
+                            <img src="Screenshot (180).png" alt="">
+                            <p>$19.00</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="product-list-con2">
+                    <div class="product-list1">
+                        <img src="the-best-is-yet-to-come-framed-poster.jpg" alt="">
+                        <div class="product-rate">
+                            <p>Premium Ceramic Break Pad & Rotor Kill Set</p>
+                            <img src="Screenshot (181).png" alt="">
+                            <p>$32.40</p>
+                        </div>
+                    </div>
+                    <div class="product-list1">
+                        <img src="mug-the-best-is-yet-to-come.jpg" alt="">
+                        <div class="product-rate">
+                            <p>Ultra-Bright Led Headlight Bulbs-6000k</p>
+                            <img src="Screenshot (180).png" alt="">
+                            <p>$18.30</p>
+                        </div>
+                    </div>
+                    <div class="product-list1">
+                        <img src="mountain-fox-cushion.jpg" alt="">
+                        <div class="product-rate">
+                            <p>Cold air intake system for boosted power</p>
+                            <img src="Screenshot (179).png" alt="">
+                            <p>$19.70</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- ==product-sales== -->
+    <section class="high-sales">
+        <div class="special-offer-con1">
+            <div class="special-offer-con1-items1">
+                <div>
+                    <p>Special offer</p>
+                    <p>GET 30% off</p>
+                    <p>Exiting bundle of car tyres</p>
+                </div>
+                <button><p>shop now</p><img src="angle-right.svg" alt=""></button>
+            </div>
+            <img src="tyre1.webp" alt="">
+        </div>
+        <div class="special-offer-con12">
+            <div class="special-offer-con1-items12">
+                <div>
+                    <p>Special offer</p>
+                    <p>GET 30% off</p>
+                    <p>Exiting bundle of car break</p>
+                </div>
+                <button><p>shop now</p><img src="angle-right.svg" alt=""></button>
+            </div>
+            <img src="vt_autosoe_home1_slide_item_1.webp" alt="">
+        </div>
+    </section>
+    <section class="high-sales">
+        <div class="special-offer-con12">
+            <div class="special-offer-con1-items12">
+                <div>
+                    <p>Special offer</p>
+                    <p>GET 30% off</p>
+                    <p>Exiting bundle of car</p>
+                </div>
+                <button><p>shop now</p><img src="angle-right.svg" alt=""></button>
+            </div>
+            <img src="vt_autosoe_home1_image_1.webp" alt="">
+        </div>
+        <div class="special-offer-con12">
+            <div class="special-offer-con1-items12">
+                <div>
+                    <p>Special offer</p>
+                    <p>GET 30% off</p>
+                    <p>Exiting bundle of car tyre wheel</p>
+                </div>
+                <button><p>shop now</p><img src="angle-right.svg" alt=""></button>
+            </div>
+            <img src="vt_autosoe_home1_testimonial_item.webp" alt="">
+        </div>
+    </section> 
+    <!-- footer -->
+     <footer>
+        <div class="footer-content">
+            <div class="footer-content-div1">
+                <div class="footer-content-div">
+                    <img src="logo.jpg" alt="">
+                    <p class="stock">Autosoe is a thriving specialty retail business,specializing in automotive parts and accessories. we also stock a wide range of tools and accessories</p>
+                </div>
+                <div class="connection-link">
+                    <p class="connect">connect with us:</p>
+                    <div>
+                        <img src="twitter.svg" alt="">
+                        <img src="facebook.svg" alt="">
+                        <img src="instagram.svg" alt="">
+                        <img src="linkedin.svg" alt="">
+                        <div class="app"><img src="apple-logo.svg" alt=""></div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-content-div">
+                <p class="hh">Contact us</p>
+                <div class="footer-content-div">
+                    <div class="toll">
+                        <img src="header-icon2.png" alt="">
+                        <p>toll free<span>+1(800) 123 456</span></p>
+                    </div>
+                    <div class="live">
+                        <img src="instagram.svg" style="color:#fff;" alt="">
+                        <p>Live chat now <button>live chat</button></p>
+                    </div>
+                    <div class="email">
+                        <!-- <img src="Screenshot (260).png" alt=""> -->
+                         <i class="fa-solid  fa-envelope"></i>
+                        <p>Email:demo@demo.com</p>
+                    </div>
+                </div>
+                <div class="business">
+                    <p>business hour :</p>
+                    <div>
+                        <p>mon-fri : 8 am - 12 am</p>
+                        <p>sat-sun : 10 am - 12 am</p>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-con">
+                <p class="hh">our company</p>
+                <div class="footer-content-div">
+                    <p>About us</p>
+                    <p>career</p>
+                    <p>affiliate</p>
+                    <p>contact us</p>
+                    <p>Gift card</p>
+                </div>
+            </div>
+            <div class="footer-con">
+                <p class="hh">My account</p>
+                <div class="footer-content-div">
+                    <p>My profile</p>
+                    <p>My order history</p>
+                    <p>My wish list</p>
+                    <p>Order tracking</p>
+                    <p>shopping cart</p>
+                </div>
+            </div>
+            <div class="footer-con">
+                <p class="hh">useful link</p>
+                <div class="footer-content-div">
+                    <p>New product</p>
+                    <p>Best seller</p>
+                    <p>Bundle&save</p>
+                    <p>Online Gift Crad</p>
+                    <p>Store Directory</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
